--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/*whats up*/
 html, body 
 {
     width: 100%;
@@ -19,22 +18,14 @@ html, body
     background: #000;
 
 }
-.occupation, .role{
-    text-align: center;
-}
-.body{
-    width: 100%;
-    height: 100%;
-}
 #center
 {
     position:fixed;
     width: 100%;
-    height: 80px;
 }
 .title{
     position: fixed;
-    margin-top: 210px;
+    margin-top: 230px;
     margin-left: 500px;
     height: 70px;
     width: 200px;
@@ -47,27 +38,14 @@ html, body
     background-color: white;
     position: fixed;
     width: 340px;
-    height: 300px;
+    height: 280px;
     top: 60%;
     left: 50%;
-    margin-top: -100px;
+    margin-top: -70px;
     margin-left: -170px;
     border-radius: 20px;
     border: 1px solid #29a329;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .1);	
-}
-.sign-up{
-    background-color: white;
-    position: fixed;
-    width: 340px;
-    height: 370px;
-    top: 60%;
-    left: 50%;
-    margin-top: -110px;
-    margin-left: -170px;
-    border-radius: 20px;
-    border: 1px solid #29a329;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
 }
 .click
 {
@@ -75,11 +53,7 @@ html, body
     top: 23%;
     left: 42%;
 }
-#signedup{
-    margin-top: 27px;
-    margin-right: 30px;
-    float: right;
-}
+
 form 
 {
     margin: 0 auto;
@@ -90,99 +64,38 @@ label
     color: green;
     display: inline-block;
     margin-left: 18px;
-    padding-top: 5px;
+    padding-top: 10px;
     font-size: 14px;
 }
-.vertical-data{
-    margin-top: 100px;
-    width: 150px;
-    border: 2px solid gray;
-    border-radius: 5px;
+.menubar{
+    background-color: #6fbf00;
+    width: 100%;
+    height: 50px;
+}
+li{
     float: left;
 }
-.header, .event{
+li a{
+    display: block;
+    padding: 14px 16px;
     text-align: center;
+    text-decoration: none;
 }
-.event{
-    padding: 5px;
+li a:hover{
+    background-color: green;
 }
-.notification{
-    display: inline;
-    width: 500px;
-    overflow: auto;
-    border: 1px solid gray;
-    margin-right: 300px;
-    margin-top: 100px;
-    float: right;
-    text-align: center;
-}
-.menubar {  
-    background-color: #6fbf00;
-    height: 58px;
-    width: 100%;
-    position: fixed;
-    z-index: 2;
-    padding: 0;
-    top: 0;
-    left: 0;
-}
-.topnav{
+ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
-li {
-    float: left;
-}
-li a, #dropdown-icon {
-    display: inline-block;
-    color: white; 
-    padding: 14px 16px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 22px;
-}
-#home{
-    font-size: 30px;
-}
-#dropdown-icon {
-    margin-right: 50px;
-    font-size: 30px;
-}
-li a:hover, .dropdown:hover #dropdown-icon {
-    background-color: green;
-}
-li.dropdown{
-    display: inline-block;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #6fbf00;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-.dropdown-content a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    text-align: left;
-    display: block;
-}
-.dropdown-content a:hover {
-    background-color: green;
-}
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-.error 
+#error 
 {
     color: red;
     display: inline-block;
     padding-top: 10px;
-    font-size: 10px;
+    font-size: 14px;
 }
 p a 
 {
@@ -195,6 +108,7 @@ p a
     -moz-transition: all .4s ease;
     transition: all .4s ease;
 }
+
 input 
 {
     font-family: "Helvetica Neue", Helvetica, sans-serif;
@@ -210,10 +124,9 @@ input[type=text], input[type=password]
     margin-top: 12px;
     margin-left: 18px;
     width: 290px;
-    height: 30px;
+    height: 35px;
 	border: 1px solid #29a329;
     border-radius: 10px;
-    padding: 0;
 	}
 input[type=submit] 
 {
@@ -235,28 +148,35 @@ input[type=submit]:hover
     color: #eafaea;     
     background-color: #004d00; 
 }
-
-/**************START PROFHOME.CSS PORTION***********/ 
-
-.vertical-menu {
-    width: 200px; /* Set a width if you like */
-    margin-top: 20px;
+//////////////////////////////////////////Added left side navbar for profhome
+.navbar-fixed-left {
+  width: 140px;
+  position: fixed;
+  border-radius: 0;
+  height: 100%;
 }
 
-.vertical-menu a {
-    background-color: #6fbf00; /* Grey background color */
-    color: white; /* white text color */
-    display: block; /* Make the links appear below each other */
-    padding: 12px; /* Add some padding */
-    text-decoration: none; /* Remove underline from links */
+.navbar-fixed-left .navbar-nav > li {
+  float: none;  /* Cancel default li float: left */
+  width: 139px;
 }
 
-.vertical-menu a:hover {
-    background-color: #ccc; /* Dark grey background on mouse-over */
+.navbar-fixed-left + .container {
+  padding-left: 160px;
 }
 
-.vertical-menu a.active {
-   /* background-color: #4CAF50; /* Add a green color to the "active/current" link */
-   background-color: black; 
-   color: white;
+/* On using dropdown menu (To right shift popuped) */
+.navbar-fixed-left .navbar-nav > li > .dropdown-menu {
+  margin-top: -330px;
+  margin-left: 140px;
 }
+//////////////////////////////////////////Added left side navbar for profhome
+//////////////////////////////////////////Added notification box for center screen
+.centerNotification {
+    margin: 10px auto;
+    max-width: 60%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+    border-spacing: 10px;
+}
+//////////////////////////////////////////Added notification box for center screen
